--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 
-{% include career-profile.html %}
+---{% include career-profile.html %}
 
-{% unless site.data.data.sidebar.education %}
-  {% include education.html %}
+---{% unless site.data.data.sidebar.education %}
+---  {% include education.html %}
 {% endunless %}
 
 {% include experiences.html %}
